# so101_ros2

./: .gitignore  README.md
so101_bringup/: CMakeLists.txt  README.md  package.xml
so101_bringup/scripts/: so101_gazebo.sh
so101_description/: CMakeLists.txt  README.md  package.xml
so101_description/launch/: robot_state_publisher.launch.py
so101_description/rviz/: so101_description.rviz
so101_description/urdf/robots/: gz_macro.xacro  so101.urdf.xacro
so101_gazebo/: CMakeLists.txt  README.md  package.xml
so101_gazebo/config/: ros2_controllers.yaml  ros_gz_bridge.yaml
so101_gazebo/launch/: so101.gazebo.launch.py
so101_gazebo/scripts/: joint_state_to_joint_cmd.py
so101_ros2/: README.md  package.xml
